"[Fix] 1つ目の左を、text-align で左よせ"

--- a/layout_parts/q6/css/style.css
+++ b/layout_parts/q6/css/style.css
@@ -5,8 +5,19 @@
   width: 90px;
   background-color: #e6f2ff; 
   padding: 10px 0;
+}
+
+.align-wrapper {
   text-align: center;
+}
+
+.align-display {
+  display: inline-block;
+}
+
+.margin-6-1 {
   margin: 0 auto;
+  text-align: center;
 }
 
 .table-container {
@@ -36,7 +47,7 @@
   background-color: #fff;
 }
 
-.is-stable {
+.position  {
   position: relative;
 }
 
@@ -47,10 +58,6 @@
   bottom: 0;
   left: 0; 
   margin: auto;
-}
-
-.is-flexible {
-  position: relative;
 }
 
 .flexible-text {
